attached_assets/Pasted-error-OUT-DIR-env-var-is-not-set-do-you-have-a-build-sc_1769526331121.txt
error: OUT_DIR env var is not set, do you have a build script?
   --> src\main.rs:287:14
    |
287 |         .run(tauri::generate_context!())
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: this error originates in the macro `tauri::generate_context` (in Nightly builds, run with -Z macro-backtrace for more info)
error[E0432]: unresolved imports `windows::Win32::Graphics::Dxgi::DXGI_OUTPUT_DESC`, `windows::Win32::Graphics::Dxgi::DXGI_OUTDUPL_DESC`
    --> src\main.rs:11:112
     |
  11 | ...IOutput1, DXGI_OUTPUT_DESC, IDXGIResource, DXGI_OUTDUPL_DESC, DXGI_OUTDUPL_FRAME_INFO, IDXGIOutputDuplication};
     |              ^^^^^^^^^^^^^^^^                 ^^^^^^^^^^^^^^^^^
     |              |                                |
     |              |                                no `DXGI_OUTDUPL_DESC` in `Win32::Graphics::Dxgi`
     |              |                                help: a similar name exists in the module: `DXGI_OUTDUPL_FLAG`
     |              no `DXGI_OUTPUT_DESC` in `Win32::Graphics::Dxgi`
     |
note: found an item that was configured out
    --> C:\Users\runneradmin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.52.0\src\Windows\Win32\Graphics\Dxgi\mod.rs:7355:12
     |
7354 | #[cfg(all(feature = "Win32_Foundation", feature = "Win32_Graphics_Dxgi_Common", feature = "Win32_Graphics_Gdi"))]
     |                                         -------------------------------------- the item is gated behind the `Win32_Graphics_Dxgi_Common` feature
7355 | pub struct DXGI_OUTPUT_DESC {
     |            ^^^^^^^^^^^^^^^^
note: found an item that was configured out
    --> C:\Users\runneradmin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.52.0\src\Windows\Win32\Graphics\Dxgi\mod.rs:7141:12
     |
7140 | #[cfg(all(feature = "Win32_Foundation", feature = "Win32_Graphics_Dxgi_Common"))]
     |                                         -------------------------------------- the item is gated behind the `Win32_Graphics_Dxgi_Common` feature
7141 | pub struct DXGI_OUTDUPL_DESC {
     |            ^^^^^^^^^^^^^^^^^
error[E0432]: unresolved import `windows::Win32::Graphics::Direct3D11::D3D11_TEXTURE2D_DESC`
     --> src\main.rs:12:160
      |
   12 | ...CE_FLAG, ID3D11Texture2D, D3D11_TEXTURE2D_DESC, D3D11_USAGE_STAGING, D3D11_CPU_ACCESS_READ, D3D11_MAPPED_SUBRESOURCE, D3D11_MAP_READ};
      |                              ^^^^^^^^^^^^^^^^^^^^
      |                              |
      |                              no `D3D11_TEXTURE2D_DESC` in `Win32::Graphics::Direct3D11`
      |                              help: a similar name exists in the module: `D3D11_TEX2D_DSV`
      |
note: found an item that was configured out
     --> C:\Users\runneradmin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.52.0\src\Windows\Win32\Graphics\Direct3D11\mod.rs:23170:12
      |
23169 | #[cfg(feature = "Win32_Graphics_Dxgi_Common")]
      |       -------------------------------------- the item is gated behind the `Win32_Graphics_Dxgi_Common` feature
23170 | pub struct D3D11_TEXTURE2D_DESC {
      |            ^^^^^^^^^^^^^^^^^^^^
error[E0432]: unresolved import `thiserror`
  --> src\main.rs:16:5
   |
16 | use thiserror::Error;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `thiserror`
   |
   = help: if you wanted to use a crate named `thiserror`, use `cargo add thiserror` to add it to your `Cargo.toml`
error[E0432]: unresolved import `lazy_static`
  --> src\main.rs:17:5
   |
17 | use lazy_static::lazy_static;
   |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`
   |
   = help: if you wanted to use a crate named `lazy_static`, use `cargo add lazy_static` to add it to your `Cargo.toml`
error: cannot find attribute `error` in this scope
  --> src\main.rs:21:7
   |
21 |     #[error("Window not found: {0}")]
   |       ^^^^^
   |
help: `error` is an attribute that can be used by the derive macro `Error`, you might be missing a `derive` attribute
   |
20 + #[derive(Error)]
21 | pub enum PokerError {
   |
error: cannot find attribute `error` in this scope
  --> src\main.rs:23:7
   |
23 |     #[error("Windows API error: {0}")]
   |       ^^^^^
   |
help: `error` is an attribute that can be used by the derive macro `Error`, you might be missing a `derive` attribute
   |
20 + #[derive(Error)]
21 | pub enum PokerError {
   |
error: cannot find attribute `error` in this scope
  --> src\main.rs:25:7
   |
25 |     #[error("Invalid dimensions: {0}x{1}")]
   |       ^^^^^
   |
help: `error` is an attribute that can be used by the derive macro `Error`, you might be missing a `derive` attribute
   |
20 + #[derive(Error)]
21 | pub enum PokerError {
   |
error: cannot find attribute `error` in this scope
  --> src\main.rs:27:7
   |
27 |     #[error("Capture failed")]
   |       ^^^^^
   |
help: `error` is an attribute that can be used by the derive macro `Error`, you might be missing a `derive` attribute
   |
20 + #[derive(Error)]
21 | pub enum PokerError {
   |
error: cannot find attribute `error` in this scope
  --> src\main.rs:29:7
   |
29 |     #[error("DXGI Error: {0}")]
   |       ^^^^^
   |
help: `error` is an attribute that can be used by the derive macro `Error`, you might be missing a `derive` attribute
   |
20 + #[derive(Error)]
21 | pub enum PokerError {
   |
error: cannot find attribute `error` in this scope
  --> src\main.rs:31:7
   |
31 |     #[error("Feature not implemented in native mode yet")]
   |       ^^^^^
   |
help: `error` is an attribute that can be used by the derive macro `Error`, you might be missing a `derive` attribute
   |
20 + #[derive(Error)]
21 | pub enum PokerError {
   |
error[E0425]: cannot find value `DXGI_STATE` in this scope
  --> src\main.rs:61:21
   |
61 |     let mut state = DXGI_STATE.lock().unwrap();
   |                     ^^^^^^^^^^ not found in this scope
warning: unused import: `Manager`
 --> src\main.rs:6:30
  |
6 | use tauri::{command, Window, Manager};
  |                              ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
warning: unused import: `SWP_NOSIZE`
 --> src\main.rs:7:128
  |
7 | ...dowTextW, IsWindowVisible, SetForegroundWindow, SetWindowPos, SWP_NOSIZE, SWP_NOMOVE, HWND_TOP, GetClassNameW};
  |                                                                  ^^^^^^^^^^
warning: unused imports: `DXGI_OUTDUPL_FRAME_INFO`, `IDXGIAdapter`, `IDXGIOutput`, and `IDXGIResource`
  --> src\main.rs:11:71
   |
11 | ...Factory, IDXGIAdapter, IDXGIOutput, IDXGIOutput1, DXGI_OUTPUT_DESC, IDXGIResource, DXGI_OUTDUPL_DESC, DXGI_OUTDUPL_FRAME_INFO, IDXGIOu...
   |             ^^^^^^^^^^^^  ^^^^^^^^^^^                                  ^^^^^^^^^^^^^                     ^^^^^^^^^^^^^^^^^^^^^^^
warning: unused imports: `D3D11_CPU_ACCESS_READ`, `D3D11_MAPPED_SUBRESOURCE`, `D3D11_MAP_READ`, `D3D11_USAGE_STAGING`, and `ID3D11Texture2D`
  --> src\main.rs:12:143
   |
12 | ...LAG, ID3D11Texture2D, D3D11_TEXTURE2D_DESC, D3D11_USAGE_STAGING, D3D11_CPU_ACCESS_READ, D3D11_MAPPED_SUBRESOURCE, D3D11_MAP_READ};
   |         ^^^^^^^^^^^^^^^                        ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^
warning: unused import: `std::sync::Mutex`
  --> src\main.rs:14:5
   |
14 | use std::sync::Mutex;
   |     ^^^^^^^^^^^^^^^^
error[E0599]: no method named `cast` found for struct `IDXGIOutput` in the current scope
  --> src\main.rs:88:44
   |
88 |         let output1: IDXGIOutput1 = output.cast().map_err(|e| PokerError::DxgiError(format!("Cast to Output1 Failed: {}", e)))?;
   |                                            ^^^^ method not found in `IDXGIOutput`
   |
  ::: C:\Users\runneradmin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.52.0\src\com_interface.rs:29:8
   |
29 |     fn cast<T: ComInterface>(&self) -> Result<T> {
   |        ---- the method is available for `IDXGIOutput` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `ComInterface` which provides `cast` is implemented but not in scope; perhaps you want to import it
   |
 6 + use windows_core::com_interface::ComInterface;
   |
error[E0599]: no method named `as_bool` found for enum `Result<T, E>` in the current scope
   --> src\main.rs:153:44
    |
153 |         if !GetWindowRect(hwnd, &mut rect).as_bool() {
    |                                            ^^^^^^^ method not found in `Result<(), windows_core::error::Error>`
error[E0599]: no method named `as_bool` found for enum `Result<T, E>` in the current scope
   --> src\main.rs:189:25
    |
189 |         if !bit_blt_res.as_bool() {
    |                         ^^^^^^^ method not found in `Result<(), windows_core::error::Error>`
error[E0599]: no method named `as_bool` found for enum `Result<T, E>` in the current scope
   --> src\main.rs:214:16
    |
214 |         if res.as_bool() {
    |                ^^^^^^^ method not found in `Result<(), windows_core::error::Error>`
Some errors have detailed explanations: E0425, E0432, E0599.
For more information about an error, try `rustc --explain E0425`.
warning: `gto-poker-bot` (bin "gto-poker-bot") generated 5 warnings
error: could not compile `gto-poker-bot` (bin "gto-poker-bot") due to 16 previous errors; 5 warnings emitted
       Error failed to build app: failed to build app
Error: Command "tauri ["build"]" failed with exit code 1